--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -4,7 +4,7 @@
 \section{Experiment}
 \label{sec:experiment}
 
-\todo[inline]{ch4 ich feedback: section introductions, and don't mix discussions or conclusions, separate those into ch5}
+\todo[inline]{ch4 ich feedback: section introductions, and don't mix discussions or conclusions, separate those into ch5. list all hyperparams}
 
 This section contains the results of the experiments described in the previous section \ref{sec:methodology}. Refer to appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer on which the experiments and results in this section were generated from.
 
