--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -24,7 +24,7 @@ Figure \ref{fig:umxandxumxslicq} shows how UMX and xumx-sliCQ are variants of th
 \begin{figure}[ht]
 	\centering
 	\subfloat[UMX system, single target]{\includegraphics[width=\textwidth]{./images-blockdiagrams/umx_clean.png}}\\
-	\subfloat[xumx-sliCQ, single target]{\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_clean.png}}
+	\subfloat[xumx-sliCQ, single target]{\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_clean_botharch.png}}
 	\caption{UMX and xumx-sliCQ compared}
 	\label{fig:umxandxumxslicq}
 \end{figure}
@@ -39,7 +39,7 @@ Figure \ref{fig:xumxcl} shows how independent UMX networks for the desired four 
 	\label{fig:xumxcl}
 \end{figure}
 
-Section \ref{sec:inputrepresentation} will describe how the sliCQT was ported to PyTorch to run on the GPU in a neural network, new frequency scales added, and how sliCQT parameters optimal for music demixing will be chosen. Next, section \ref{sec:neuralnet} will discuss the changes made to UMX to use the sliCQT instead of the STFT in xumx-sliCQ, the replacement of the original Bi-LSTM architecture with a CDAE architecture, and the combining of the four independent target networks into a single model with the X-UMX loss functions. Finally, section \ref{sec:postprocessing} will show how the post-processing Wiener-EM step was adapted for the sliCQT.
+Section \ref{sec:inputrepresentation} will describe how the sliCQT was ported to PyTorch to run on the GPU in a neural network. It will also describe new frequency scales added for music applications, and how sliCQT parameters optimal for music demixing will be chosen. Section \ref{sec:neuralnet} will discuss the changes made to UMX to use the sliCQT instead of the STFT in xumx-sliCQ, the choice of Bi-LSTM and CDAE neural architectures, and the combining of the four independent target networks into a single model with the X-UMX loss functions. Finally, section \ref{sec:postprocessing} will show how the post-processing Wiener-EM step was adapted for the sliCQT.
 
 \subsection{Input representation}
 \label{sec:inputrepresentation}
@@ -165,9 +165,9 @@ In addition to the frequency scale, the user must specify the slice length and t
 \subsubsection{Choosing sliCQT parameters}
 \label{sec:slicqparamsrch}
 
-Mix-phase inversion (MPI) is the music demixing strategy where the target magnitude spectrogram is combined with the phase of the mix spectrogram to create a time-domain target waveform estimate, as was described in section \ref{sec:noisyphaseoracle}. The MPI oracle represents the best possible result of the MPI strategy by using the ground truth target magnitude spectrogram. In this section, we will design a sliCQT parameter search to discover optimal sliCQT parameters that produce the best MPI oracle results. Our hypothesis is that using the optimal sliCQT parameters in xumx-sliCQ would produce the best final music demixing results.
+In this section, we will design a sliCQT parameter search to discover optimal sliCQT parameters that produce the best MPI oracle results. Mix-phase inversion (MPI) is the music demixing strategy where the target magnitude spectrogram is combined with the phase of the mix spectrogram to create a time-domain target waveform estimate, as was described in section \ref{sec:noisyphaseoracle}. The MPI oracle represents the best possible result of the MPI strategy by using the ground truth target magnitude spectrogram. Since the mix-phase strategy is used in UMX and xumx-sliCQ, our hypothesis is that maximizing the MPI oracle would maximize the music demixing performance of the final neural network.
 
-As discussed in section \ref{sec:ml}, the validation split of a dataset is often used to tune hyperparameters, which are the parameters of a machine learning or deep learning network defined by the user. In xumx-sliCQ, the sliCQT parameters are a hyperparameter, like how the STFT settings of the window and hop size are hyperparameters in UMX and X-UMX.
+As discussed in section \ref{sec:ml}, the validation split of a dataset is often used to tune hyperparameters, which are the parameters of a machine learning or deep learning network defined by the user. In xumx-sliCQ, the sliCQT parameters are a hyperparameter, similar to how the STFT settings of the window and hop size are hyperparameters in UMX and X-UMX.
 
 According to \textcite{randomgrid}, 60 iterations of a random grid search will find a statistically good set of hyperparameters in a case where an exhaustive grid search is impossible. We chose a random grid search because the space of all the possible sliCQT parameters is too large for an exhaustive grid search.
 
@@ -204,9 +204,9 @@ Recall from section \ref{sec:evalbss} that the Signal-to-Distortion (SDR) is one
 \subsubsection{Speeding up the parameter search using the GPU and CuPy}
 \label{sec:fasterbsscupy}
 
-Like in section \ref{sec:torchslicq}, the Python line-profiler library was used to discover any performance bottlenecks or slow parts of the MPI oracle parameter search script. The slowest step was the calculation of the SDR score from the BSS eval metrics library.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}} package. We would benefit from a speedup of the parameter search script to get results faster. For that reason we explored a speedup using the GPU.
+In this section, we will explore a speedup of the parameter search script using the GPU. Like in section \ref{sec:torchslicq}, the Python line-profiler library was used to discover any performance bottlenecks or slow parts of the MPI oracle parameter search script. The slowest step was the calculation of the SDR score from the BSS eval metrics library.\footnote{\url{https://github.com/sigsep/sigsep-mus-eval}} package.
 
-The bottlenecks of the library use NumPy and SciPy operations, which are Python numerical computation libraries that use the CPU. The CuPy library\footnote{\url{https://cupy.dev/}} provides replacement functions of NumPy and SciPy which run on NVIDIA GPUs using the CUDA compute framework.\footnote{\url{https://developer.nvidia.com/cuda-toolkit}} This allows for acceleration of numerical operations through GPU parallelization. Note that although PyTorch was used to replace NumPy code in the earlier section \ref{sec:torchslicq}, CuPy is intended to be a direct replacement of NumPy and SciPy and thus represents an easier porting effort. Also, the MPI oracle testbench will not be used inside the xumx-sliCQ neural network, so it doesn't need to use PyTorch.
+The bottlenecks of the BSS eval metrics library use NumPy and SciPy operations, which are Python numerical computation libraries that use the CPU. The CuPy library\footnote{\url{https://cupy.dev/}} provides replacement functions of NumPy and SciPy which run on NVIDIA GPUs using the CUDA compute framework.\footnote{\url{https://developer.nvidia.com/cuda-toolkit}} This allows for acceleration of numerical operations through GPU parallelization. Note that although PyTorch was used to replace NumPy code in the earlier section \ref{sec:torchslicq}, CuPy is intended to be a direct replacement of NumPy and SciPy and thus represents an easier porting effort. Also, the MPI oracle testbench is separate from the xumx-sliCQ PyTorch code, it doesn't need to use PyTorch.
 
 The replacement of the NumPy or SciPy function is as simple as using the CuPy equivalent, taking special care about GPU out-of-memory errors. The library is unchanged for end users, and the GPU is simply used whenever possible, falling back to the CPU in case of any errors, or if there is no GPU available on the user's computer. Similar to the NSGT/sliCQT library, the modifications made to the museval library are stored in my copy of the repository for future reference.\footnote{\url{https://github.com/sevagh/sigsep-mus-eval/commit/f3b7540faddc8d2b1bc91cecaf05fd20d96df7c6}}
 
@@ -215,57 +215,58 @@ The replacement of the NumPy or SciPy function is as simple as using the CuPy eq
 \subsection{Neural network}
 \label{sec:neuralnet}
 
-As mentioned, Open-Unmix has a reference PyTorch implementation\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} on which xumx-sliCQ, the neural network of this thesis, will be based.
+First, in section \ref{sec:replacestft}, we will look at how the Open-Unmix PyTorch code needs to be modified in xumx-sliCQ to replace the STFT with the ragged sliCQT described in section \ref{sec:torchslicq}. As mentioned, Open-Unmix has a reference PyTorch implementation\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} on which xumx-sliCQ, the neural network of this thesis, will be based.
 
-First, in section \ref{sec:replacestft}, we will look at how the Open-Unmix PyTorch code needs to be modified in xumx-sliCQ to replace the STFT with the ragged sliCQT described in section \ref{sec:torchslicq}.
+Next, in section \ref{sec:slicqarches}, we will show two neural network architectures that can be used in xumx-sliCQ. We will show how the original Bi-LSTM architecture from UMX and the convolutional denoising autoencoder (CDAE) architecture described in section \ref{sec:cdae}, both originally intended for the STFT, can be adapted to operate on the ragged sliCQT. In section \ref{sec:deoverlap}, we will discuss a de-overlap layer which is necessary for any neural architecture for the sliCQT.
 
-Next, in section \ref{sec:slicqdecision}, we will discuss the choice to use a convolutional architecture in xumx-sliCQ over the original Bi-LSTM architecture of Open-Unmix. In section \ref{sec:convlayers}, we will show how the STFT-based convolutional denoising autoencoder (CDAE) architectures described in section \ref{sec:cdae} were adapted to work on the ragged sliCQT in xumx-sliCQ.
-
-Finally, in section \ref{sec:xumxinc} we will show how we incorporated the CrossNet-Open-Unmix (X-UMX) idea of combining the four target models in a single model.
+Finally, in section \ref{sec:xumxinc} we will show how we incorporated the X-UMX idea of combining the four target models in a single model.
 
 \subsubsection{Replacing the STFT with the sliCQT in UMX}
 \label{sec:replacestft}
 
-Figure \ref{fig:umxandxumxslicq} showed the proposed modifications to the base UMX architecture to use the sliCQT in place of the STFT in the input representation.
+In this section, we will describe the changes made to UMX to support the two distinct characteristics of the sliCQT shown in section \ref{sec:torchslicq}: the ragged shape, and the 3D dimensions requiring an overlap-add to produce a 2D time-frequency matrix.
 
 In sections \ref{sec:raggedtf} and \ref{sec:torchslicq}, it was mentioned that the ragged sliCQT has a different datastructure than the single rectangular matrix of the STFT, consisting of a list of rectangular matrices. This arises from the different temporal frame rates of different frequency bins, which is a desired characteristic of the NSGT/sliCQT (or CQT).
 
 Additionally, the sliCQT coefficients are returned with the time coefficients distributed into adjacent slices, and these slices have a 50\% overlap-add with their neighboring slices. The overlap-add was described in section \ref{sec:theoryslicqt} on the theoretical background of the sliCQT, and an implementation of the overlap-add procedure and spectrogram plotting code was discussed in \ref{sec:torchslicq}.
 
-First, the sliCQT must always be overlap-added to go from the 3D sliced datastructure to the familiar 2D time-frequency datastructure. Then, all of the operations of UMX which expect a single rectangular matrix of the STFT need to be modified to work on a list of matrices instead, where each separate matrix in the list consists of a group of frequency bins that share the same temporal framerate, ordered from the lowest to highest frequency bins.
+First, the sliCQT must always be overlap-added to go from the 3D sliced datastructure to the familiar 2D time-frequency datastructure. Next, all of the operations of UMX which expect a single rectangular matrix of the STFT need to be modified to work on a list of matrices instead, where each separate matrix in the list consists of a group of frequency bins that share the same temporal framerate, ordered from the lowest to highest frequency bins.
 
-A necessary consideration in the network design is the non-invertibility of the overlap-add procedure, since the original 3D sliced datastructure is needed to synthesize an audio waveform. The neural network needs a strategy to compute a 3D de-overlap-added estimate from the 2D overlap-added spectrogram. This was achieved with a final transpose convolutional layer at the end of the neural network, which will be covered in greater detail in the next section \ref{sec:convlayers}.
+A necessary consideration in the network design is the non-invertibility of the overlap-add procedure, since the original 3D sliced datastructure is needed to synthesize an audio waveform. The neural network needs a strategy to compute a 3D de-overlap-added estimate from the 2D overlap-added spectrogram. This was achieved with a final transpose convolutional layer at the end of the neural network, whose effect is to double the time coefficients to reverse their 50\% reduction from the overlap-add. Then, the 2D shape is reshaped back to the original 3D shape. The deoverlap is shown in greater detail in section \ref{sec:deoverlap}.
 
-\subsubsection{sliCQT neural network design choices}
-\label{sec:slicqdecision}
+\subsubsection{sliCQT neural network architectures}
+\label{sec:slicqarches}
 
-\todo[inline]{
-Zero-pad: slicqt dimensionality analysis, big transform = use CDAE papers for low parameter
-\url{https://vtechworks.lib.vt.edu/bitstream/handle/10919/98619/Messou_EJ_T_2020.pdf?sequence=1&isAllowed=y}
-\url{https://arxiv.org/pdf/2010.02178.pdf}
-\url{https://towardsdatascience.com/the-fall-of-rnn-lstm-2d1594c74ce0}
-\url{https://www.researchgate.net/publication/313732034_Monoaural_Audio_Source_Separation_Using_Deep_Convolutional_Neural_Networks}
-}
+In this section, a choice of Bi-LSTM and CDAE architectures for the ragged sliCQT in xumx-sliCQ will be presented.
 
-\subsubsection{Defining the convolutional layers of the CDAE}
-\label{sec:convlayers}
+In the original UMX, the neural network architecture is a dense (i.e., linear) encoder-decoder with a Bi-LSTM. The purpose of the dense encoder/decoder with the STFT is to reduce the 2049 frequency bins of the STFT into a smaller dimension set of 512 values, which are then used as the input and output of the Bi-LSTM. In the case of the sliCQT, the output frequency bins are less numerous than the STFT. As described in section \ref{sec:slicqparamsrch}, the maximum frequency bins of the sliCQT were capped at 300, which is a small enough value to use directly as the input to the Bi-LSTM without needing to be encoded to a lower dimension with dense layers.
 
-The convolutional denoising autoencoder (CDAE) models of \textcite{plumbley1, plumbley2} were used in xumx-sliCQ. Convolutional layers are a simple way of defining 2D time-frequency filters that slide over the 2D time-frequency matrices that correspond to different time buckets of the ragged sliCQT. The diagram in Figure \ref{fig:cdaeslicqt} shows how the convolutional layers should be applied to the ragged sliCQT.
+Figure \ref{fig:umxnetworkdetails} shows the details of the Bi-LSTM for the STFT with the UMX default 2049 frequency bins, and how it should be adapted to a sliCQT that has a smaller set of frequency bins $f << 2049$.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_pertarget_largefont.png}
+	\subfloat[Dense encoder/decoder + Bi-LSTM architecture for the STFT with 2049 frequency bins]{\includegraphics[width=\textwidth]{./images-blockdiagrams/umx_bilstm_orig.png}}\\
+	\subfloat[Bi-LSTM architecture for the sliCQT with $f << 2049$ frequency bins]{\includegraphics[width=0.65\textwidth]{./images-blockdiagrams/umx_bilstm_slicq.png}}
+	\caption{The original UMX Bi-LSTM for the STFT, and the variant adapted for the sliCQT}
+	\label{fig:umxnetworkdetails}
+\end{figure}
+
+As discussed in sections \ref{sec:cnn} and \ref{sec:cdae}, convolutional layers, and specifically convolutional denoising autoencoders (CDAE), are simple ways of defining 2D time-frequency filters that slide over a 2D time-frequency matrix of Fourier coefficients. The convolutional denoising autoencoder (CDAE) models of \textcite{plumbley1, plumbley2} were adapted for use in xumx-sliCQ.
+
+Figure \ref{fig:cdaeslicqt} shows how both the Bi-LSTM and CDAE network architectures should be applied to the ragged sliCQT. Instead of having a single neural network operate on the single matrix of the STFT, which includes all of the frequency bins at the same temporal frame rate, we must create a neural network for each of the sub-matrices of the ragged sliCQT.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{./images-blockdiagrams/xumx_slicq_pertarget_cdae_bilstm.png}
 	\caption{Block diagram of the individual CNNs of xumx-sliCQ}
 	\label{fig:cdaeslicqt}
 \end{figure}
 
-Using the values from \textcite{plumbley2}, the two layers of convolution in the CDAE of xumx-sliCQ use 25 and 55 channels respectively. This means that the stereo or 2-channel sliCQT has 25 output feature maps (or channels) computed from the first encoder convolutional layer, and 55 output feature maps from the second encoder convolutional layer. These are reversed in the decoder layer i.e., $2 \rightarrow \text{encoder}(25 \rightarrow 55) \rightarrow \text{decoder}(25 \rightarrow 2)$.
+Using the values from \textcite{plumbley2}, the two layers of convolution in the CDAE of xumx-sliCQ use 25 and 55 channels respectively. This means that the stereo or 2-channel sliCQT has 25 output feature maps (or channels) computed from the first encoder convolutional layer, and 55 output feature maps from the second encoder convolutional layer. These are reversed in the decoder layer i.e., $2 \rightarrow \text{encoder}(25 \rightarrow 55) \rightarrow \text{decoder}(25 \rightarrow 2)$. The sub-matrices of the ragged sliCQT may have different dimensions for time and frequency, due to their varying frequency bins and temporal framerates, so the 2D convolution filter sizes are adapted to the input size. After each layer, a 2D batch normalization (BN) and nonlinear activation function, specifically the rectified linear unit (ReLU) activation, are applied \parencite{plumbley2}.
 
-Different buckets in the ragged transform may have different dimensions for time and frequency, so the 2D convolution filter sizes are different depending on the input size. The training input is split into one second sequences, which is the same sequence size used in both CDAE papers \parencite{plumbley1, plumbley2}. This means that the ragged sliCQT dimensions (frequency bins and time coefficients) for one second of audio dictate the maximum size of time and frequency kernel that can be applied in each convolution layer. After each layer, a 2D batch normalization (BN) and nonlinear activation function, specifically the rectified linear unit (ReLU) activation, are applied \parencite{plumbley2}.
+The exact parameters and configuration of the convolutional kernels and layers are described in Tables \ref{table:convtable1}, \ref{table:convtable2}, \ref{table:convtable3}, and \ref{table:convtable4}. The parameters were initially chosen from the kernel values and layers in \textcite{plumbley1, plumbley2}. The parameters were repeatedly modified in an informal hyperparameter tuning process during my submissions to the ISMIR 2021 Music Demixing Challenge. The various tested networks can be viewed in the submission repository here.\footnote{\url{https://gitlab.aicrowd.com/sevagh/music-demixing-challenge-starter-kit}} The design was also constrained by the time limits of the network inference in the challenge. For example, dilations in the time dimension were chosen to efficiently increase the temporal receptive field on the sliCQT without slowing down the inference step.
 
-Note that after the encoder-decoder layers for the sliCQT, we need to add a ``de-overlap layer.'' This is the inverse of the slice overlap-add procedure with learnable parameters. It uses a transpose convolution layer with a kernel size of $(1, 3)$ and a stride of $(1, 2)$ where the first dimension is frequency and the second is time. This means that for each frequency bin, the kernel slides and considers three time coefficients to produce six time coefficients. The effect is to double the number of time coefficients, which is a reversal of the 50\% reduction of time coefficients from the overlap-add procedure. Finally, the 2D tensor is reshaped to the original 3D shape. The final activation is a Sigmoid, which is real-valued $\in [0.0, 1.0]$. This makes the network estimate a soft or ratio mask which can then be applied to the input mixed magnitude 3D sliCQT spectrogram.
-
-The exact parameters and configuration of the convolutional kernels and layers are described in Tables \ref{table:convtable1}, \ref{table:convtable2}, \ref{table:convtable3}, \ref{table:convtable4}, and \ref{table:convtable5}. The parameters were initially chosen from the kernel values and layers in \textcite{plumbley1, plumbley2}. The parameters were repeatedly modified in an informal hyperparameter tuning process during my submissions to the ISMIR 2021 Music Demixing Challenge. The various tested networks can be viewed in the submission repository here.\footnote{\url{https://gitlab.aicrowd.com/sevagh/music-demixing-challenge-starter-kit}} The design was also constrained by the time limits of the network inference in the challenge. For example, dilations in the time dimension were chosen to efficiently increase the temporal receptive field on the sliCQT without slowing down the inference step.
+Note that both the Bi-LSTM and CDAE architectures use the 2D overlap-added sliCQT, and need a de-overlap layer which is shown above in Figure \ref{fig:cdaeslicqt}. The de-overlap layer is discussed in section \ref{sec:deoverlap}.
 
 \begin{table}[ht]
 	\centering
@@ -273,12 +274,12 @@ The exact parameters and configuration of the convolutional kernels and layers a
 	\label{table:convtable1}
 	\begin{tabular}{ |l|l|l| }
 	 \hline
-		\# time coefficients & CDAE layer & De-overlap layer \\
+		\# time coefficients & CDAE layer \\
 	 \hline
 	 \hline
-		$\le 100$ & \makecell[l]{size=7\\stride=1\\dilation=2} & \makecell[l]{size=3\\stride=2\\dilation=1} \\
+		$\le 100$ & \makecell[l]{size=7\\stride=1\\dilation=2} \\
 	 \hline
-		$> 100$ & \makecell[l]{size=13\\stride=1\\dilation=2} & \makecell[l]{size=3\\stride=2\\dilation=1} \\
+		$> 100$ & \makecell[l]{size=13\\stride=1\\dilation=2} \\
 	 \hline
 \end{tabular}
 	\vspace{1em}
@@ -286,14 +287,14 @@ The exact parameters and configuration of the convolutional kernels and layers a
 	\label{table:convtable2}
 \begin{tabular}{ |l|l|l| }
 	 \hline
-		\# frequency bins & CDAE layer & De-overlap layer \\
+		\# frequency bins & CDAE layer \\
 	 \hline
 	 \hline
-		$\le 10$ & \makecell[l]{size=1\\stride=1\\dilation=1} & \makecell[l]{size=1\\stride=1\\dilation=1} \\
+		$\le 10$ & \makecell[l]{size=1\\stride=1\\dilation=1} \\
 	 \hline
-		$\ge 10, < 20$ & \makecell[l]{size=3\\stride=1\\dilation=1} & \makecell[l]{size=1\\stride=1\\dilation=1} \\
+		$\ge 10, < 20$ & \makecell[l]{size=3\\stride=1\\dilation=1} \\
 	 \hline
-		$\ge 20$ & \makecell[l]{size=5\\stride=1\\dilation=1} & \makecell[l]{size=1\\stride=1\\dilation=1} \\
+		$\ge 20$ & \makecell[l]{size=5\\stride=1\\dilation=1} \\
 	 \hline
 \end{tabular}
 	\vspace{1em}
@@ -318,20 +319,18 @@ The exact parameters and configuration of the convolutional kernels and layers a
 		ConvTranspose2d$\Big($\makecell[l]{in=55\\out=25}$\Big)$, BN, ReLU & ConvTranspose2d$\Big($\makecell[l]{in=25\\out=2}$\Big)$, BN, ReLU \\
 	 \hline
 \end{tabular}
-	\vspace{1em}
-	\caption{De-overlap (inverse 50\% overlap-add) layer}
-	\label{table:convtable5}
-\begin{tabular}{ |l| }
-	 \hline
-		De-overlap layer \\
-	 \hline
-	 \hline
-		ConvTranspose2d$\Big($\makecell[l]{in=2\\out=2}$\Big)$, Sigmoid \\
-	 \hline
-\end{tabular}
 \end{table}
 
 \newpagefill
+
+\subsubsection{sliCQT de-overlap layer}
+\label{sec:deoverlap}
+
+In this section, we will discuss the ``de-overlap layer'' which is necessary for both the Bi-LSTM and CDAE architectures of xumx-sliCQ. This is the inverse of the 50\% slice overlap-add procedure with learnable parameters.
+
+We use a transpose convolution layer with a kernel size of $(1, 3)$ and a stride of $(1, 2)$ where the first dimension is frequency and the second is time. This means that for each frequency bin, the kernel slides and considers three time coefficients to produce six time coefficients. The effect is to double the number of time coefficients, which is a reversal of the 50\% reduction of time coefficients from the overlap-add procedure.
+
+Finally, the 2D sliCQT is reshaped to the original 3D shape, separating it back out into separate slices. The final activation is a Sigmoid, which is real-valued $\in [0.0, 1.0]$. This makes the network estimate a soft or ratio mask which can then be applied to the input mixed magnitude 3D sliCQT spectrogram.
 
 \subsubsection{Combining the target networks like X-UMX}
 \label{sec:xumxinc}
@@ -340,14 +339,9 @@ This section will describe how the xumx-sliCQ code was modified to combined and 
 
 For simplicity, having a single training loop and single trained model to perform the separation is easier than training four independent models. For this reason, and that the music demixing performance of X-UMX is higher than UMX, we chose to use the X-UMX variant of UMX.
 
-The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. In xumx-sliCQ, the MUSDB18-HQ data loader was modified to return the mixed waveform and all four targets, $(x, y_{\text{vocals}}, y_{\text{bass}}, y_{\text{drums}}, y_{\text{other}})$. Four copies of the CDAE neural network described in the previous section \ref{sec:convlayers} are created in the xumx-sliCQ training script, and each one is trained using a $(x, y_{\text{target}})$ pair for its source.
+The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. In xumx-sliCQ, the MUSDB18-HQ data loader was modified to return the mixed waveform and all four targets, $(x, y_{\text{vocals}}, y_{\text{bass}}, y_{\text{drums}}, y_{\text{other}})$. Four copies of the neural networks described in the previous section \ref{sec:slicqarches} are created in the xumx-sliCQ training script, and each one is trained using a $(x, y_{\text{target}})$ pair for its source.
 
-To implement the time-domain SDR loss, we use the auraloss Python package.\footnote{\url{https://github.com/csteinmetz1/auraloss}} We used the SI-SDR (scale-invariant SDR) \parencite{roux2018sdr} variant of SDR as the loss function. SI-SDR is a simpler and more robust variant of SDR which improves on some failure cases of SDR \parencite{roux2018sdr}. Notably, there is a scale-invariant factor introduced such that differences in scale (i.e., loudness of the waveform) don't significantly affect the SDR. The SI-SDR loss is shown in equation \eqref{equation:sisdr}:
-\begin{align}
-	& \text{SI-SDR}(x, \hat{x}) = 10 \log_{10}\Big(\frac{||\frac{\hat{x}^{T}x}{||x||^{2}} x||^{2}}{||\frac{\hat{x}^{T}x}{||x||^{2}} x - \hat{x}||^{2}}\Big)\tag{33}\label{equation:sisdr}
-\end{align}
-
-Contrasted with equation \eqref{equation:sdrinstr} shown for the SDR score in section \ref{sec:evalbss}, we note the addition of the factor $\frac{\hat{x}^{T}x}{||x||^{2}}$ to implement the scale invariance.
+To implement the time-domain SDR loss, we use the auraloss Python package.\footnote{\url{https://github.com/csteinmetz1/auraloss}} We used the SI-SDR (scale-invariant SDR) \parencite{roux2018sdr} variant of SDR as the loss function. SI-SDR is a simpler and more robust variant of SDR which improves on some failure cases of SDR \parencite{roux2018sdr}.
 
 The inference in xumx-sliCQ is the same as UMX, with the combined four-target model outputting four estimated magnitude spectrograms, followed by the post-processing Wiener-EM step that will be described in the next section \ref{sec:postprocessing}.
 
@@ -355,6 +349,8 @@ The inference in xumx-sliCQ is the same as UMX, with the combined four-target mo
 
 \subsection{Post-processing}
 \label{sec:postprocessing}
+
+In this section, we will discuss how the final post-processing step of UMX, which refines the four target estimates of the neural network using Wiener-EM as described in section \ref{sec:umx}, was adapted for the sliCQT in xumx-sliCQ.
 
 After the neural network outputs the estimates of the magnitude sliCQT for all four targets, the post-processing Wiener expectation-maximization (EM) step can be applied to improve the estimates. The code for the Wiener-EM step is essentially unchanged from the original, since both the sliCQT and STFT output complex Fourier coefficients.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/v2021/xumx_slicq/filtering.py\#L290}} The inputs to the Wiener-EM function are the mixed complex spectrogram and a rectangular matrix containing the four target magnitude spectrograms.
 
